--- a/WandKalender/index.html
+++ b/WandKalender/index.html
@@ -9,7 +9,9 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
         <!-- icons -->
+        <!--
         <link rel="icon" type="image/svg+xml" href="img/mdblogo-dark.svg">
+        -->
 
         <!-- styles -->
         <link rel="stylesheet" href="css/style.css">
@@ -18,6 +20,11 @@
 
         <!-- scripts -->
         <script src="config.js"></script>
+
+        <script src="js/Element.js"></script>
+        <script src="js/Input.js"></script>
+
+        <script src="js/Login.js"></script>
         <script src="js/CalDAV.js"></script>
         <script src="js/WandKalender.js"></script>
 
