Interface and results handling improved

--- a/WandKalender/index.html
+++ b/WandKalender/index.html
@@ -26,6 +26,7 @@
 
         <script src="js/Login.js"></script>
         <script src="js/CalDAV.js"></script>
+        <script src="js/CalendarManager.js"></script>
         <script src="js/WandKalender.js"></script>
 
         <title>Wand Kalender</title>
