Create events from ical data

--- a/WandKalender/index.html
+++ b/WandKalender/index.html
@@ -26,6 +26,8 @@
 
         <script src="js/Login.js"></script>
         <script src="js/CalDAV.js"></script>
+        <script src="js/iCalParser.js"></script>
+        <script src="js/Event.js"></script>
         <script src="js/CalendarManager.js"></script>
         <script src="js/WandKalender.js"></script>
 
