Basic calendar UI classes created

--- a/WandKalender/index.html
+++ b/WandKalender/index.html
@@ -29,6 +29,7 @@
         <script src="js/iCalParser.js"></script>
         <script src="js/Event.js"></script>
         <script src="js/CalendarManager.js"></script>
+        <script src="js/Calendar.js"></script>
         <script src="js/WandKalender.js"></script>
 
         <title>Wand Kalender</title>
