--- a/WandKalender/index.html
+++ b/WandKalender/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/fonts.css">
+        <link rel="stylesheet" href="css/Calendar.css">
 
         <!-- scripts -->
         <script src="config.js"></script>
