Calendar UI added

--- a/WandKalender2/index.html
+++ b/WandKalender2/index.html
@@ -17,6 +17,7 @@
         <script src="config.js"></script>
 
         <script src="js/Element.js"></script>
+        <script src="js/Calendar.js"></script>
 
         <script src="js/WandKalender.js"></script>
         <script src="js/WebSockets.js"></script>
