--- a/WandKalender2/index.html
+++ b/WandKalender2/index.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/fonts.css">
 
+        <link rel="stylesheet" href="css/Calendar.css">
+
         <!-- scripts -->
         <script src="config.js"></script>
 
