Clock with date and time added

--- a/WandKalender2/index.html
+++ b/WandKalender2/index.html
@@ -14,12 +14,14 @@
         <link rel="stylesheet" href="css/fonts.css">
 
         <link rel="stylesheet" href="css/Calendar.css">
+        <link rel="stylesheet" href="css/Clock.css">
 
         <!-- scripts -->
         <script src="config.js"></script>
 
         <script src="js/Element.js"></script>
         <script src="js/Calendar.js"></script>
+        <script src="js/Clock.js"></script>
 
         <script src="js/WandKalender.js"></script>
         <script src="js/WebSockets.js"></script>
